--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO List</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; background: #f4f4f4; }
-        form { margin: 20px auto; display: flex; gap: 10px; justify-content: center; }
-        input, button { padding: 10px; font-size: 16px; }
-        button { background: #28a745; color: white; border: none; cursor: pointer; }
-        button:disabled { background: gray; cursor: not-allowed; }
-        ul { list-style: none; padding: 0; }
-        li { background: white; padding: 10px; margin: 5px auto; width: 200px; border-radius: 5px; box-shadow: 2px 2px 5px #aaa; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>TODO LIST</h1>
@@ -23,21 +15,6 @@
     <h2>TASKS</h2>
     <ul id="taskList"></ul>
 
-    <script>
-        const newTask = document.getElementById("newTask");
-        const submit = document.getElementById("submit");
-        const taskList = document.getElementById("taskList");
-
-        newTask.addEventListener("input", () => submit.disabled = !newTask.value.trim());
-
-        document.getElementById("taskForm").addEventListener("submit", e => {
-            e.preventDefault();
-            const task = document.createElement("li");
-            task.textContent = newTask.value.trim();
-            taskList.append(task);
-            newTask.value = "";
-            submit.disabled = true;
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
