--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="submit" disabled>Add Task</button>
     </form>
     <h2>TASKS</h2>
-    <ul id="taskList"></ul>
+    <ol id="taskList"></ol>
 
     <script src="script.js"></script>
 </body>
